# newboston-django1

./: Makefile  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
